# reasonably-good-token-vault

./: .gitignore  0-AI-MANIFEST.a2ml  AI.a2ml  CHANGELOG.md  CONTRIBUTING.adoc  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  Mustfile  PROJECT-SUMMARY.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.adoc.invariants.md  ROADMAP.adoc  SECURITY.adoc  STATE.scm  TECHSTACK.adoc  TEST-NEEDS.md  TOPOLOGY.md  USERMEMORY.scm  config.nickel  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: casket-pages.yml  ci.yml  codeql.yml  governance.yml  hypatia-scan.yml  instant-sync.yml  lockdown.yml  mirror.yml  nightly.yml  quality.yml  release.yml  rsr-antipattern.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  security.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/agent_instructions/: coverage.a2ml  debt.a2ml  methodology.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/bot_directives/: debt.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/contractiles/trust/: Trustfile.a2ml
.machine_readable/self-validating/: README.adoc
.machine_readable/self-validating/examples/: project-metadata.k9.ncl  setup-repo.k9.ncl
.machine_readable/svc/: README.adoc
.machine_readable/svc/k9/: README.adoc  template-hunt.k9.ncl  template-kennel.k9.ncl  template-yard.k9.ncl
.machine_readable/svc/k9/examples/: ci-config.k9.ncl  project-metadata.k9.ncl  setup-repo.k9.ncl
.machine_readable/svc/self-validating/: template-hunt.k9.ncl
.machines_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  PLAYBOOK.scm
.well-known/: security.txt
LICENSES/: PALIMPSEST.md
ada-cli/: svalinn_cli.gpr
ada-cli/src/: svalinn-identity.ads  svalinn-security.ads  svalinn-tui.ads  svalinn-vault.ads  svalinn_main.adb
ansible-collection-svalinn/plugins/modules/: svalinn_user.py
asterisk-integration/agi-bin/: svalinn_mfa_verify.php
config/: ai-agent-allowlist.toml  backup-config.nickel  mfa-config.nickel
container/: svalinn.containerfile
container/config/firewalld/: ipv4-lockdown.sh
container/config/firewalld/zones/: svalinn.xml
container/config/selinux/: svalinn.te
contractiles/dust/: Dustfile
contractiles/lust/: Intentfile
contractiles/must/: Mustfile
database/cubs/: cubs-config.nickel
database/xtdb-search/: xtdb-config.edn
docs/: COMPLIANCE-MFA.md  DEPLOYMENT-GUIDE.md  DESIGN-2026-03-16-zero-knowledge-proxy.md  TSDM-ASSESSMENT.md  tech-debt-2026-05-26.md
docs/whitepaper/: arxiv-metadata.txt  svalinn-vault.tex
docs/wikidata/: wikidata-draft.md
ffi/zig/src/: main.zig
honeypot/: ipv4-honeypot.sh
network/airvpn/: airvpn.conf
network/cadre-router/: cadre-config.nickel
network/ipv6-coalesce/: Idris2Packet.idr
packaging/android/: build.gradle.kts
packaging/arch/: PKGBUILD
packaging/cron/: svalinn-backup
packaging/debian/: control  rules
packaging/flatpak/: io.github.hyperpolymath.rgt-vault.yml  io.github.hyperpolymath.svalinn.yml
packaging/macos/macports/: Portfile
packaging/ostree/: rgt-vault.rpm-ostree.yaml  svalinn-vault.rpm-ostree.yaml
packaging/rpm/: rgt-vault.spec  svalinn-vault.spec
packaging/systemd/: install.sh  svalinn-backup.service  svalinn-backup.timer  svalinn-vault.service
packaging/windows/chocolatey/: rgt-vault.nuspec  svalinn-vault.nuspec
packaging/windows/scoop/: rgt-vault.json  svalinn-vault.json
packaging/windows/winget/: rgt-vault.yaml  svalinn-vault.yaml
rgtv-cli/: Cargo.toml
rgtv-cli/src/: main.rs
security/: gitforge-protection.sh  hardening.nickel
site/: _headers  ddraig.scm
svalinn-cli/: Cargo.toml
svalinn-cli/src/: main.rs
terraform-provider-svalinn/: main.go
terraform-provider-svalinn/provider/: provider.go
tests/aspect/: aspect_tests.sh
validation/: README.adoc  echidna-spec.sol  echidna.yaml
validation/coq/: CryptoProperties.v
validation/echidna/: crypto_properties.sol  echidna.yaml  identity_properties.sol  lockdown_properties.sol
validation/z3/: crypto_proofs.jl  crypto_proofs.py
vault-broker/: Cargo.toml  Containerfile  EXPLAINME.adoc  fly.toml
vault-broker/src/: main.rs
vault-core/: Cargo.toml
vault-core-ats/: Makefile  build.zig
vault-core-ats/DATS/: cli.dats  crypto.dats
vault-core-ats/SATS/: cli.sats  crypto.sats  identity.sats  lockdown.sats  storage.sats  tui.sats
vault-core-ats/tests/: test_crypto.dats  test_identity.dats
vault-core-ats/zig/: crypto_bindings.zig
vault-core-ats/zig/tests/: crypto_test.zig
vault-core/benches/: crypto_bench.rs
vault-core/src/: armor.rs  auth_protection.rs  backup.rs  backup_cli.rs  crypto.rs  error.rs  ffi.rs  identity.rs  lib.rs  lockdown.rs  mfa.rs  mfa_enterprise.rs  password_policy.rs  polymorphic.rs  primes.rs  qrng.rs  timelock.rs  vault.rs  versioning.rs
vault-interface/: rescript.json
vault-interface/src/: SvalinnVault.res
vault-interface/src/Svalinn/: ABI.idr
vault-worker/: Cargo.toml  wrangler.toml
vault-worker/src/: lib.rs
