# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "vault-broker"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
description = "RGTV HTTP grant broker — issues one-use opaque grants for LLM agents"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/reasonably-good-token-vault"

[[bin]]
name = "vault-broker"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
zeroize = { version = "1.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
