# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: 2025 Hyperpolymath

[package]
name = "svalinn-vault-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Secure identity vault with post-quantum cryptography"
repository = "https://github.com/hyperpolymath/reasonable-good-token-vault"
keywords = ["cryptography", "vault", "post-quantum", "security", "identity"]
categories = ["cryptography", "authentication"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Argon2id - Memory-hard password hashing
argon2 = { version = "0.5", features = ["std"] }

# BLAKE3 - Fast cryptographic hash
blake3 = "1.5"

# AES-GCM - Authenticated encryption
aes-gcm = "0.10"

# Post-quantum cryptography (Kyber-1024, Dilithium)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Ed448 - Edwards curve signatures
ed448-goldilocks = "0.9"

# SHAKE3 (SHA-3 XOF)
sha3 = "0.10"

# Time handling for time-locks
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Secure memory handling
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"

# Random number generation (CSPRNG)
rand = "0.8"
rand_chacha = "0.3"

# Base64 encoding for armoring
base64 = "0.21"

# Hex encoding
hex = "0.4"

# Error handling
thiserror = "1.0"

# Prime number verification
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# WireGuard integration
x25519-dalek = "2.0"

# TOTP for MFA
totp-rs = { version = "5.4", features = ["gen_secret"] }

# UUID for identity tracking
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9"

[[bench]]
name = "crypto_bench"
harness = false

[features]
default = ["std"]
std = []
ffi = []
wasm = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
